--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,12 @@ keywords = ["background-removal", "machine-learning", "onnx"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ort = { version = "2.0.0-rc.1", default-features = false, features = ["ndarray"] }
+ort = { version = "=2.0.0-rc.1", default-features = false, features = ["download-binaries", "ndarray"] }
+ort-sys = "=2.0.0-rc.1"
 image = "0.25.0"
 anyhow = "1.0.81"
 ndarray = "0.15.6"
 fast_image_resize = "3.0.4"
 
 [dev-dependencies]
-ort = { version = "2.0.0-rc.1", default-features = false, features = ["download-binaries"] }
+ort = { version = "=2.0.0-rc.1", default-features = false, features = ["download-binaries"] }
